--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a href="https://www.linkedin.com/in/ahmed-hassaan-84a82b29b/">My linkedin <i class="fa-brands fa-linkedin"></i></a></li>
                 <li><a href="https://www.youtube.com/@ahmedoppal4683">My Channel <i class="fa-brands fa-youtube"></i></a></li>
             </ul>
-            <img src="../Images/Side.jpg" alt="">
+            <img src="../../CSS/Images/Side.jpg" alt="">
         </aside>
         <article>
             <h2>Welcome to My Website</h2>
@@ -46,7 +46,7 @@
             <div class="services-container">
                 <div class="service-box">
                     <div class="service-img">
-                        <img src="../Images/Web.design.jpg" alt="">
+                        <img src="../../CSS/Images/Web.design.jpg" alt="">
                     </div>
                     <div class="service-title">
                         <h3>Web Designing</h3>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="service-box">
                     <div class="service-img">
-                        <img src="../Images/web.develop.jpg" alt="">
+                        <img src="../../CSS/Images/web.develop.jpg" alt="">
                     </div>
                     <div class="service-title">
                         <h3>Web Development</h3>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="service-box">
                     <div class="service-img">
-                        <img src="../Images/mobile.jpg" alt="">
+                        <img src="../../CSS/Images/mobile.jpg" alt="">
                     </div>
                     <div class="service-title">
                         <h3>Mobile App Development</h3>
